
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(scpc_2018_ride_bus scpc_2018_ride_bus.cc)
add_executable(scpc_2018_spaceship scpc_2018_spaceship.cc)
add_executable(16288 16288.cc)
add_executable(16287 16287.cc)
add_executable(17173 17173.cc)
add_executable(2810 2810.cc)
add_executable(3041 3041.cc)
add_executable(10041 10041.cc)
add_executable(2718 2718.cc)